[add] Jay Forten 형식 이야기 추가

--- a/3.Resource(Subject)/Jay Forten/02.품사와 형식.md
+++ b/3.Resource(Subject)/Jay Forten/02.품사와 형식.md
@@ -15,10 +15,10 @@
 형식은 각 자리로 구분되어 있다. 각 자리마다 수행 해야할 역할이 있다.
 
 각 자리에 올 수 있는 품사
-- 주어 자리 : 명사
-- 동사 자리 : 동사
-- 보어 자리 : 명사/형용사
-- 목적어 자리 : 명사
+- [주어 자리] : 명사
+- [동사 자리] : 동사
+- [보어 자리] : 명사/형용사
+- [목적어 자리] : 명사
 
 > 문장에서 명사, 동사, 형용사를 구분하는 것이 중요.
 > 부사는 문장을 길게 늘린다. 문장에서 부사를 제거하면 문장이 간결하여 이해하기 쉬워짐.
