--- a/3.Resource(Subject)/Jay Forten/01.오리엔테이션.md
+++ b/3.Resource(Subject)/Jay Forten/01.오리엔테이션.md
@@ -1,7 +1,6 @@
-
 # 문법은 암기가 아니다
 
-암기가 아닌 이해 위주의 영어 학습이 중요
+> 암기가 아닌 이해 위주의 영어 학습이 중요
 
 ex) This is my a car
 - my : 소유격 -> 나의 -> 특정
@@ -11,9 +10,7 @@ ex) This is my a car
 
 # 단어는 암기 반, 해석 반
 
-단어의 기본적인 의미는 암기.
-
-문맥 상황에 따라 단어의 의미가 바뀌기에 문맥 상황을 이해하고 단어 재해석 필요.
+> 단어의 기본적인 의미는 암기이지만 문맥 상황에 따라 단어의 의미가 바뀌기에 문맥 상황을 이해하고 단어 재해석 필요.
 
 # 숙어는 이해다
 
@@ -25,4 +22,3 @@ look : 보다.
 look for : 찾다.
 look after : 돌보다.
 look into : 조사하다.
-
