--- a/3.Resource(Subject)/Jay Forten/04.품사(형용사, 부사).md
+++ b/3.Resource(Subject)/Jay Forten/04.품사(형용사, 부사).md
@@ -46,8 +46,7 @@
 - ex) The performance was pretty(부) impressive(형)
 - ex) You are my(소유격) pretty(명)
 
-> 단어를 보고 명사, 형용사, 부사를 구분하는 것이 중요하지 않다.
-> 문장에서 단어가 명사로 사용 되었는지, 형용사로 사용 되었는지, 부사로 사용 되었는지 목적을 파악해야 한다.
+> 단어를 보고 명사, 형용사, 부사를 구분하는 것이 중요하지 않다. 문장에서 단어가 명사로 사용 되었는지, 형용사로 사용 되었는지, 부사로 사용 되었는지 목적을 파악해야 한다.
 
 ex) Must
 - You *must* keep the rules.
@@ -69,7 +68,7 @@ ex) Fine
 - I paid a parking *fine*(명)
 	- 벌금
 
-ex) evidence : 증거
+ex) Evidence : 증거
 - I *evidenced* : 증언하다.
 
 ex) Much
@@ -77,7 +76,7 @@ ex) Much
 - You are *much*(부) young(형)
 - I have *much*(형) money(명)
 
-ex) but
+ex) But
 - He is poor, *but* he is happy.
 	- 그러나
 - Nobody *but*(전치) you
